fixed bug where scrollbar width was counted as max width

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,15 +3,17 @@
 @tailwind utilities;
 
 //global styles
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Noto Sans KR, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Noto Sans KR, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
+body::-webkit-scrollbar {
+  width: 0;
+}
 ol,
 ul,
 li {
